# resumerank_audit

./: .gitignore  APP_README.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  FINAL_STATUS.md  GIT_DEPLOY.md  HYBRID_ARCHITECTURE_UPGRADE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PROJECT_PROMPT.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_OLD.md  SUMMARY.md  VISUALIZATION_GUIDE.md  app.py  pyproject.toml  requirements-deploy.txt  requirements-frozen.txt  requirements.txt  verify_deployment.sh
.streamlit/: config.toml
config/: config.yaml
data/processed/: job_descriptions.json  resumes.json
docs/: GETTING_STARTED.md
interview-prep/: INTERVIEW_GUIDE.md
scripts/: csv_quick_start.py  example_usage.py  prepare_csv_data.py  prepare_data.py  quick_setup.sh  run_evaluation.py
src/: __init__.py
src/data/: __init__.py  csv_loader.py  loader.py  parser.py  preprocessor.py  privacy.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/explainability/: __init__.py  ablation.py  token_contribution.py
src/fairness/: __init__.py  counterfactual.py  fairness_metrics.py  perturbations.py
src/models/: __init__.py  bm25_ranker.py  hybrid_ranker.py  semantic_model.py  skill_matcher.py  tfidf_ranker.py
src/reporting/: __init__.py  report_generator.py  visualizations.py
src/utils/: __init__.py  config.py
tests/: __init__.py  test_data.py  test_evaluation.py  test_fairness.py  test_models.py
